# mlx-analytics

./: CMakeLists.txt  README.md  mlx-analytics.cc  mlx-analytics.h  mlx-cwt.cc  mlx-cwt.h  mlx-fft.cc  mlx-fft.h  mlx-gaussian-filter.cc  mlx-gaussian-filter.h  mlx-sos-filter.cc  mlx-sos-filter.h
operations/: mlx-operators.cc  mlx-operators.h
operators/: mlx-convolution.cc  mlx-convolution.h  mlx-operators.cc  mlx-operators.h  mlx-window-statistics.cc  mlx-window-statistics.h
structures/: mlx-vector.cc  mlx-vector.h
wavelets/: mlx-wvt-gauss.c  mlx-wvt-gauss.h
